# paste

./: .gitignore  .gitignore.swp  README.md
bison-flex/: CMakeLists.txt  run.sh  word-count.l
bison-flex/example/: calc.l  calc.y
bison-flex/example/flex_bison/SQL/: lexer.l  parse.y
bison-flex/example/flex_bison_llvm/: CMakeLists.txt  Makefile  codegen.cpp  codegen.h  node.h  parser.cpp  tokens.cpp
bison-flex/example/flex_bison_llvm/src/: JITExample.cpp  codegen.h  main.cpp  node.h
bison-flex/example/flex_bison_llvm/toy/: jit.h  toy.cpp  toy2.cpp  toy3.cpp  toy4.cpp
bison-flex/example/onlyLexer/: lex.l
bison-flex/src/: CMakeLists.txt
bison-flex/src/flex/: CMakeLists.txt  buildSymbol.l  token.l
cpp-paste/: CMakeLists.txt  main.cpp  run.cpp
cpp-paste/example/: assert.h  file.h  format2format.cpp  inline.h  mutex.h  rand.cpp  string.h
paste/: .gitignore  .project  pom.xml
paste/src/main/java/avro/: schema.java
paste/src/main/java/cacheUtils/: ConfigCachae.java  UpdateExpire.java  ehcache.xml
paste/src/main/java/classUtils/: ClickHousePreparedStatementImpl.java  PlayBackTable.java  PrintClassVar.java  base.java  playBack.java
paste/src/main/java/dataUtils/: base.java  createUUID.java
paste/src/main/java/dl4j/: MLPClassifierLinear.java  Nd4jEx1_INDArrayBasics.java  PlotUtil.java  RegressionMathFunctions.java  Trainer.java  base.java
paste/src/main/java/execFiles/: readCityName.java  result.txt
paste/src/main/java/file/: LockFile.java  ParquetUtil.java  RWExcel.java  deleteFile.java  query.txt  readFile.java  writeFile.java
paste/src/main/java/fileUtils/: RWExcel.java  query.txt  readFile.java
paste/src/main/java/json/: GetJsonValue.java  JsonObjectToSQLStatement.java  JsonService.java  LockLocation.java  ParseJson.java  TranslateJson.java  WhichType.java
paste/src/main/java/jsonUtils/: GetJsonValue.java  JsonObjectToSQLStatement.java  JsonService.java  LockLocation.java  WhichType.java
paste/src/main/java/listUtils/: CheckListMethod.java
paste/src/main/java/math/: math.java
paste/src/main/java/netUtils/: http.java
paste/src/main/java/nlpUtils/: Chinese2PinYin.java
paste/src/main/java/sortUtils/: BubbleSort.java  CountingSort.java  HeapSort.java  InsertSort.java  MergeSort.java  QuickSort.java  SelectSort.java  ShellSort.java  SortTemplate.java  SortTest.java
paste/src/main/java/spring/: ApplicationTest.java  ConfigurableTest.java  ControllerTest.java  ServiceTest.java  annotation.java
paste/src/main/java/stringUtils/: Byte.java  CityUrl.java  Constants.java  CopyString.java  Encode.java  MarkdownTable.java  Regex.java  Replacer.java  SnowFlake.java  StringBuilderTest.java  SystemInfo.java  base.java
paste/src/main/java/tensorflow/: basic.java
paste/src/main/java/threadUtils/: ConnectionPool.java  FutureDemo.java
paste/src/main/java/timeUtils/: ConvertUnix.java  printTime.java
paste/src/main/java/utils/: DataOrder.java
paste/src/resources/: ehcache.xml  log4j.properties
paste/src/resourse/: test.xls
paste/src/resourse/cache/: ehcache.xml
paste/src/test/java/slf4j/: Demo.java
python-paste/magneto/keras/: __init__.py  basic.py
python-paste/magneto/tensorflow/: helloworld.py  linear_regression.py  operations.py
python-paste/test/: mxnet-test.py
python-paste/utils/: mail.py
scala-paste/: pom.xml
scala-paste/src/main/java/utils/: SkewUtils.java
scala-paste/src/main/resources/: log4j.properties
scala-paste/src/main/resources/spark/: add_column.sql  analyse_percent.sql
scala-paste/src/main/scala/analyzer/: DataSkewAnalyzer.scala  PercentileApprox.scala
scala-paste/src/main/scala/demo/: demo.scala
scala-paste/src/main/scala/log/: Logging.scala
(+127 files in other folders)
